[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tubecron"
version = "0.1.0"
description = "A cron-like system for processing YouTube transcripts and managing related tasks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cachetools==5.5.1",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "google-api-core==2.24.1",
    "google-api-python-client==2.160.0",
    "google-auth==2.38.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.1",
    "googleapis-common-protos==1.66.0",
    "httplib2==0.22.0",
    "idna==3.10",
    "oauthlib==3.2.2",
    "proto-plus==1.26.0",
    "protobuf==5.29.3",
    "pyasn1==0.6.1",
    "pyasn1_modules==0.4.1",
    "pyparsing==3.2.1",
    "requests==2.32.3",
    "requests-oauthlib==2.0.0",
    "rsa==4.9",
    "uritemplate==4.1.1",
    "urllib3==2.3.0",
    "youtube-transcript-api==0.6.2",
    "openai>=1.12.0,<2.0.0",
    "httpx>=0.24.1,<1.0.0"
]

[tool.setuptools]
packages = {find = {where = ["."], exclude = ["tokens*", "transcripts*", "credentials*"]}}
